--- a/sample/index.html
+++ b/sample/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <style>
-      html, body { height: 100%; padding: 0; margin: 0;}
+      html, body { height: 100%; padding: 0; margin: 0; overflow: hidden;}
       #app { position: relative; height: 100%; }
       form { font-size: 12px; }
       form.toggle { display: none; }
